force-app/main/default/objects/Syllabus__c/Syllabus__c.object-meta.xml
<CustomObject>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Stores Class Syllabus information</description>
    <label>Syllabus</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syllabi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>