force-app/main/default/objects/Syllabus__c/fields/Section_1_Content__c.field-meta.xml
<CustomField>
    <fullName>Section_1_Content__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Week 1 Syllabus content
Populated: Manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Section 1 Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>