force-app/main/default/objects/Syllabus__c/fields/Section_3_Title__c.field-meta.xml
<CustomField>
    <fullName>Section_3_Title__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Title for Week 3 Syllabus content
Populated: Manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Section 3 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>